get report type on date filter under pay now api added
